--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div id="intro">
                 <h2>Mr. Kocka</h2>
                 <p>Radics Péter vagyok, 2020 óta foglalkozom webfejlesztéssel. Eredeti végzettségemből – szociális munka – hoztam magammal a kliens oldali szemléletet. Minden munkámban igyekszem a megrendelő elvárásainak megfelelni. Elsősorban kisvállalkozók, cégek és magánszemélyek megkeresését várom. Bármi is legyen a feladat annyi biztos, hogy mindig legjobb tudásom szerint helytállok. Barátságos hozzáállásommal és áraimmal várom leendő ügyfeleimet.</p>
-                <p class="gitinfo">Portfolió oldalam elérhető a<a target="_blank" href="https://github.com/mrkocka/portfoli_3.0.3"k> Github-on</a>!</p>
+                <p class="gitinfo">Portfolió oldalam elérhető a<a target="_blank" href="https://github.com/mrkocka/portfolio_3.1.0-a"k> Github-on</a>!</p>
                 <h2>Ismereteim</h2>
                 <div id="experience">
                     <div class="exlogo">
