--- a/logoGallery.html
+++ b/logoGallery.html
@@ -63,7 +63,7 @@
         <li>
           <a href="./logoGallery.html"> Logók </a>
           <a href="./index.html"><i class="fas fa-home"></i> Főoldal</a>
-          <a href="./feltoltes.html"> Fantasy Térképek</a>
+          <a href="./fantasyGallery.html"> Fantasy Térképek</a>
         </li>
       </ul>
     </nav>
@@ -177,5 +177,49 @@
         </div>
       </section>
     </main>
+    
+    <footer>
+      <section id="footerBox">
+        <div class="logoBox">
+          <img src="./img/mr.logo_3.png" alt="mrkockalogo" />
+        </div>
+        <div class="socialBox">
+          <div class="socialIcon">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-youtube"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-pinterest"></a>
+            <a
+              href="https://github.com/mrkocka"
+              target="_blank"
+              class="fa fa-github"
+            ></a>
+          </div>
+          <p class="tel">
+            <i class="fas fa-mobile-alt"></i> <a href="#"> 06 20 47 44 222</a>
+          </p>
+
+          <p class="email">
+            <i class="fas fa-envelope-open-text"></i>
+            <a href="#">info@mrkocka.hu</a>
+          </p>
+        </div>
+        <div class="textBox">
+          <a href="./sutik.html">Sütik (cookie) kezelése</a>
+          <a href="./feltoltes.html">Adatvédelmi irányelvek</a>
+          <a href="./impresszum.html">Impresszum</a>
+          <a href="./kapcsolat.html">Kapcsolat</a>
+          <a href="./feltoltes.html">Köszönettel tartozom!</a>
+        </div>
+      </section>
+      <section id="cpoyArea">
+        <p>COPYRIGHT &copy2021 Mr.Kocka</p>
+      </section>
+      <section class="verzio">
+        <p>Verzio 3.1.0.</p>
+      </section>
+    </footer>
   </body>
+  
 </html>
