--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <ul>
         <li><a href="#home">Főoldal</a></li>
         <li><a href="#about">Rólam</a></li>
-        <li><a href="#portfolio">Portfolió</a></li>
+        <li><a href="#portfolio">Portfólió</a></li>
         <li><a href="#services">Szolgáltatások</a></li>
         <li><a href="../blog/bloghome.html">Blog</a></li>
         <li><a href="#contact">Kapcsolat</a></li>
@@ -128,7 +128,7 @@
       </section>
 
       <section id="portfolio">
-        <h2 class="headings">PORTFOLIÓ</h2>
+        <h2 class="headings">PORTFÓLIÓ</h2>
         <section class="selectButton">
           <ul class="actions">
             <li>
@@ -205,7 +205,7 @@
             </div>
           </a>
 
-          <a href="./feltoltes.html">
+          <a href="./fantasyGallery.html">
             <div data-type="grafic" class="image imagegrafic1 show">
               <div class="info">
                 <h2>Fantasy Térképek</h2>
