--- a/fantasyGallery.html
+++ b/fantasyGallery.html
@@ -85,7 +85,7 @@
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/1.jpg"
+                  src="./img/gallery/fantasy/tm/1.jpg"
                   width="100%"
                   height="100%"
                 />
@@ -98,7 +98,7 @@
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/2.jpg"
+                  src="./img/gallery/fantasy/tm/2.jpg"
                   width="100%"
                   height="100%"
                 />
@@ -111,7 +111,7 @@
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/3.jpg"
+                  src="./img/gallery/fantasy/tm/3.jpg"
                   width="100%"
                   height="100%"
                 />
@@ -124,7 +124,7 @@
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/4.jpg"
+                  src="./img/gallery/fantasy/tm/4.jpg"
                   width="100%"
                   height="100%"
                 />
@@ -137,7 +137,7 @@
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/7.jpg"
+                  src="./img/gallery/fantasy/tm/7.jpg"
                   width="100%"
                   height="100%"
                 />
@@ -150,7 +150,7 @@
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/8.jpg"
+                  src="./img/gallery/fantasy/tm/8.jpg"
                   width="100%"
                   height="100%"
                 />
@@ -163,7 +163,7 @@
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/9.jpg"
+                  src="./img/gallery/fantasy/tm/9.jpg"
                   width="100%"
                   height="100%"
                 />
@@ -176,7 +176,7 @@
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/10.jpg"
+                  src="./img/gallery/fantasy/tm/10.jpg"
                   width="100%"
                   height="100%"
                 />
@@ -189,7 +189,7 @@
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/11.jpg"
+                  src="./img/gallery/fantasy/tm/11.jpg"
                   width="100%"
                   height="100%"
                 />
@@ -202,7 +202,7 @@
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/12.jpg"
+                  src="./img/gallery/fantasy/tm/12.jpg"
                   width="100%"
                   height="100%"
                 />
@@ -215,7 +215,7 @@
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/13.jpg"
+                  src="./img/gallery/fantasy/tm/13.jpg"
                   width="100%"
                   height="100%"
                 />
@@ -228,25 +228,25 @@
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/14.jpg"
+                  src="./img/gallery/fantasy/tm/14.jpg"
                   width="100%"
                   height="100%"
                 />
               </a>
             </li>
-            <li>
+            <!-- <li>
               <a
                 href="./img/gallery/fantasy/15.jpg"
                 class="fancybox"
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/15.jpg"
+                  src="./img/gallery/fantasy/tm/15.jpg"
                   width="100%"
                   height="100%"
                 />
               </a>
-            </li>
+            </li> -->
             <li>
               <a
                 href="./img/gallery/fantasy/16.jpg"
@@ -254,7 +254,7 @@
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/16.jpg"
+                  src="./img/gallery/fantasy/tm/16.jpg"
                   width="100%"
                   height="100%"
                 />
@@ -267,7 +267,7 @@
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/17.jpg"
+                  src="./img/gallery/fantasy/tm/17.jpg"
                   width="100%"
                   height="100%"
                 />
@@ -280,7 +280,7 @@
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/18.jpg"
+                  src="./img/gallery/fantasy/tm/18.jpg"
                   width="100%"
                   height="100%"
                 />
@@ -293,7 +293,7 @@
                 data-fancybox="gallery1"
               >
                 <img
-                  src="./img/gallery/fantasy/19.jpg"
+                  src="./img/gallery/fantasy/tm/19.jpg"
                   width="100%"
                   height="100%"
                 />
