--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <section id="about">
         <div id="pic">
-          <img src="./img/avatar_3.jpg" alt="Egy kép rólam" />
+          <img id="avatar" src="./img/avatar_3.jpg" alt="Egy kép rólam" />
           <div id="intro">
             <h2>Mr. Kocka</h2>
             <p>
